<resources>
    <string name="app_name">mini-internet-banking</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="infoSaldo">Informasi Saldo</string>
    <string name="mutasi">Mutasi Rekening</string>
    <string name="transfer">Transfer</string>
    <string name="pembelian">Pembelian</string>
    <string name="history">Histori Transaksi</string>
    <string name="account">Pengaturan akun</string>
    <string name="new_rekening"><u>Buka Rekening</u></string>
</resources>
