<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/balance_info"
            android:title="@string/infoSaldo"
            android:icon="@drawable/ic_balance"/>

        <item
            android:id="@+id/mutation"
            android:title="@string/mutasi"
            android:icon="@drawable/ic_mutation"/>

        <item
            android:id="@+id/transfer"
            android:title="@string/transfer"
            android:icon="@drawable/ic_transfer"/>

        <item
            android:id="@+id/buying"
            android:title="@string/pembelian"
            android:icon="@drawable/ic_buying"/>

        <item
            android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/acc_setting"
            android:title="@string/account"
            android:icon="@drawable/ic_setting"/>
    </group>
</menu>